Move all assets to /public/assets and update paths to relative

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ViralClip — Plan. Post. Grow at Scale</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <style>
     :root {
       --purple: #7c3aed;
@@ -246,13 +246,13 @@
     </header>
 
     <section class="hero">
-      <img src="/assets/images/hero-fog-foreground.png" alt="" class="fog-foreground">
-      <img src="/assets/images/particle-overlay.png" alt="" class="particle-overlay">
+      <img src="assets/images/hero-fog-foreground.png" alt="" class="fog-foreground">
+      <img src="assets/images/particle-overlay.png" alt="" class="particle-overlay">
 
       <div class="platforms">
-        <img src="/assets/images/platform-instagram-float.png" alt="" class="platform-icon">
-        <img src="/assets/images/platform-tiktok-float.png" alt="" class="platform-icon">
-        <img src="/assets/images/platform-youtube-float.png" alt="" class="platform-icon">
+        <img src="assets/images/platform-instagram-float.png" alt="" class="platform-icon">
+        <img src="assets/images/platform-tiktok-float.png" alt="" class="platform-icon">
+        <img src="assets/images/platform-youtube-float.png" alt="" class="platform-icon">
       </div>
 
       <div class="hero-content">
@@ -265,7 +265,7 @@
         </div>
 
         <div class="dashboard-preview">
-          <img src="/assets/images/dashboard-mock-perspective.png" alt="Dashboard Preview" class="dashboard-mock-img">
+          <img src="assets/images/dashboard-mock-perspective.png" alt="Dashboard Preview" class="dashboard-mock-img">
         </div>
       </div>
     </section>
