Add stats bar section below hero

--- a/public/index.html
+++ b/public/index.html
@@ -63,5 +63,20 @@
 
 </section>
 
+<div class="stats-bar">
+  <div class="stat">
+    <strong>191,782</strong>
+    <span>Creators growing</span>
+  </div>
+  <div class="stat">
+    <strong>8,587,229</strong>
+    <span>Posts viralized last month</span>
+  </div>
+  <div class="stat">
+    <strong>3,524</strong>
+    <span>Short-form platforms supported</span>
+  </div>
+</div>
+
 </body>
 </html>
