--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login | ViralClip</title>
-  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="/assets/css/auth.css" />
 </head>
 <body>
   <div class="auth-page">
@@ -20,6 +20,6 @@
     </form>
   </div>
 
-  <script type="module" src="/js/login.js"></script>
+  <script type="module" src="/assets/js/login.js"></script>
 </body>
 </html>
