Simplify auth pages to clean email/password forms

--- a/public/signup.html
+++ b/public/signup.html
@@ -2,28 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Sign Up – ViralClip</title>
+  <title>Sign up – ViralClip</title>
   <link rel="stylesheet" href="assets/css/auth.css" />
 </head>
 <body>
 
-  <!-- Floating background -->
   <div class="auth-bg">
     <img src="assets/images/hero-fog-foreground.png" class="fog" />
     <img src="assets/images/particle-overlay.png" class="particles" />
-
-    <img src="assets/images/platform-instagram-float.png" class="float ig" />
-    <img src="assets/images/platform-youtube-float.png" class="float yt" />
   </div>
 
-  <!-- Auth card -->
   <div class="auth-card">
-    <div class="logo">
-      <img src="assets/images/logo.png" alt="ViralClip" />
-    </div>
-
-    <h1>Get started!</h1>
-    <p>Create your account to manage all your short-form content.</p>
+    <h1>Create your account</h1>
+    <p>Start growing with ViralClip.</p>
 
     <form id="signupForm">
       <div class="input">
@@ -33,24 +24,11 @@
 
       <div class="input">
         <span>🔒</span>
-        <input type="password" placeholder="Create a password" required />
+        <input type="password" placeholder="Create password" required />
       </div>
 
       <button type="submit" class="primary">Create account</button>
     </form>
-
-    <div class="divider">OR</div>
-
-    <button class="social google">Sign up with Google</button>
-    <button class="social threads">Sign up with Threads</button>
-    <button class="social facebook">Sign up with Facebook</button>
-    <button class="social twitter">Sign up with Twitter / X</button>
-
-    <p class="terms">
-      By signing up, you agree to our
-      <a href="#">Terms of Service</a> and
-      <a href="#">Privacy Policy</a>.
-    </p>
 
     <p class="switch">
       Already have an account?
