--- a/public/login.html
+++ b/public/login.html
@@ -2,27 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Login – ViralClip</title>
+  <title>Log in – ViralClip</title>
   <link rel="stylesheet" href="assets/css/auth.css" />
 </head>
 <body>
 
-  <!-- Floating background -->
   <div class="auth-bg">
     <img src="assets/images/hero-fog-foreground.png" class="fog" />
     <img src="assets/images/particle-overlay.png" class="particles" />
-
-    <img src="assets/images/platform-tiktok-float.png" class="float tt" />
-    <img src="assets/images/platform-youtube-float.png" class="float yt" />
   </div>
 
-  <!-- Auth card -->
   <div class="auth-card">
-    <div class="logo">
-      <img src="assets/images/logo.png" alt="ViralClip" />
-    </div>
-
-    <h1>Welcome back!</h1>
+    <h1>Welcome back</h1>
     <p>Log in to access your account.</p>
 
     <form id="loginForm">
@@ -33,26 +24,11 @@
 
       <div class="input">
         <span>🔒</span>
-        <input type="password" placeholder="Enter your password" required />
+        <input type="password" placeholder="Password" required />
       </div>
 
       <button type="submit" class="primary">Log in</button>
     </form>
-
-    <a class="forgot" href="#">Forgot password?</a>
-
-    <div class="divider">OR</div>
-
-    <button class="social google">Log in with Google</button>
-    <button class="social threads">Log in with Threads</button>
-    <button class="social facebook">Log in with Facebook</button>
-    <button class="social twitter">Log in with Twitter / X</button>
-
-    <p class="terms">
-      By logging in, you agree to our
-      <a href="#">Terms of Service</a> and
-      <a href="#">Privacy Policy</a>.
-    </p>
 
     <p class="switch">
       Don't have an account?
